--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate"
-
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.3",
@@ -31,7 +30,7 @@
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.454.0",
-    "next": "15.0.2",
+    "next": "^15.1.1-canary.25",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.3",
     "react": "19.0.0-rc-02c0e824-20241028",
