--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.3",
     "react": "19.0.0-rc-02c0e824-20241028",
+    "react-color": "^2.19.3",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.1",
@@ -48,6 +49,7 @@
     "@prisma/client": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-color": "^3.0.13",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
