--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.1",
+    "react-top-loading-bar": "^3.0.2",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
