--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "postinstall": "prisma generate"
+
   },
   "dependencies": {
     "@ably/chat": "^0.4.0",
@@ -39,6 +38,7 @@
     "lucide-react": "^0.454.0",
     "next": "^15.2.0-canary.33",
     "next-auth": "^5.0.0-beta.25",
+    "next-share": "^0.27.0",
     "next-themes": "^0.4.3",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-color": "^2.19.3",
@@ -54,17 +54,14 @@
   },
   "devDependencies": {
     "@prisma/client": "^6.0.0",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
+  
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-color": "^3.0.13",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+  
     "postcss": "^8",
     "prisma": "^6.0.0",
     "tailwindcss": "^3.4.1",
