feat: add image and video compression functionality in PostForm component

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@ably/chat": "^0.4.0",
     "@auth/prisma-adapter": "^2.7.3",
+    "@ffmpeg/core": "^0.12.10",
+    "@ffmpeg/ffmpeg": "^0.12.15",
+    "@ffmpeg/util": "^0.12.2",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -29,10 +32,12 @@
     "@types/jest": "^29.5.14",
     "ably": "^2.6.3",
     "bcryptjs": "^2.4.3",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
+    "ffmpeg": "^0.0.4",
     "lucide-react": "^0.454.0",
     "next": "^15.2.0-canary.33",
     "next-auth": "^5.0.0-beta.25",
@@ -52,6 +57,7 @@
   },
   "devDependencies": {
     "@prisma/client": "^6.0.0",
+    "@types/ffmpeg": "^1.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-color": "^3.0.13",
