--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.14",
+    "@vercel/blob": "^0.27.3",
     "ably": "^2.6.3",
     "bcryptjs": "^2.4.3",
     "browser-image-compression": "^2.0.2",
@@ -58,6 +59,7 @@
   "devDependencies": {
     "@prisma/client": "^6.0.0",
     "@types/ffmpeg": "^1.0.7",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-color": "^3.0.13",
