--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.14",
     "@vercel/blob": "^0.27.3",
+    "@vercel/speed-insights": "^1.2.0",
     "ably": "^2.6.3",
     "bcryptjs": "^2.4.3",
     "browser-image-compression": "^2.0.2",
